src/test/ui/parser/removed-syntax-uniq-mut-ty.stderr
error: expected one of `>`, const, lifetime, or type, found `mut`
  --> $DIR/removed-syntax-uniq-mut-ty.rs:1:20
   |
LL | type mut_box = Box<mut isize>;
   |                    ^^^ expected one of `>`, const, lifetime, or type here

error: aborting due to previous error

